finish lesson2 works

--- a/Lesson2/Python-第2节课作业-王冰.ipynb
+++ b/Lesson2/Python-第2节课作业-王冰.ipynb
@@ -11,6 +11,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 0. 判断闰年"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input year: 2000\n",
+      "the year 2000 is leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = input('input year: ')\n",
+    "y = int(y)\n",
+    "if ((0 == y % 4) and not (0 == y % 100)) or (0 == y % 400):\n",
+    "    print('the year {} is leap year'.format(y))\n",
+    "else:\n",
+    "    print('the year {} is not leap year'.format(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. 实现一周的记账功能\n",
     "首先记录输入的7天的收入，然后记录输入的7天的支出。  \n",
     "然后打印出以下内容：\n",
@@ -22,24 +52,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please input income for day01\n",
+      "please input income for day12\n",
+      "please input income for day23\n",
+      "please input income for day34\n",
+      "please input income for day45\n",
+      "please input income for day56\n",
+      "please input income for day62.5555\n",
+      "please input outcome for day01\n",
+      "please input outcome for day12\n",
+      "please input outcome for day23.5666\n",
+      "please input outcome for day31.22\n",
+      "please input outcome for day42.344\n",
+      "please input outcome for day51.222\n",
+      "please input outcome for day60.1\n",
+      "7天的收入(list) ===================================\n",
+      "day0's income: 1.0\n",
+      "day1's income: 2.0\n",
+      "day2's income: 3.0\n",
+      "day3's income: 4.0\n",
+      "day4's income: 5.0\n",
+      "day5's income: 6.0\n",
+      "day6's income: 2.56\n",
+      "7天的支出(list) ===================================\n",
+      "day0's outcome: 1.0\n",
+      "day1's outcome: 2.0\n",
+      "day2's outcome: 3.57\n",
+      "day3's outcome: 1.22\n",
+      "day4's outcome: 2.34\n",
+      "day5's outcome: 1.22\n",
+      "day6's outcome: 0.1\n",
+      "每天的结余(dict) ===================================\n",
+      "day0's balance: 0.0\n",
+      "day1's balance: 0.0\n",
+      "day2's balance: -0.57\n",
+      "day3's balance: 2.78\n",
+      "day4's balance: 2.66\n",
+      "day5's balance: 4.78\n",
+      "day6's balance: 2.46\n",
+      "最终的结余 =========================================\n",
+      "final balance: 12.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "in0   = []\n",
+    "out0  = []\n",
+    "save0 = dict()\n",
+    "\n",
+    "for d in range(7):\n",
+    "    i = round(float(input('please input income for day{}'.format(d))),2)\n",
+    "    in0.append(i)\n",
+    "    \n",
+    "for d in range(7):\n",
+    "    i = round(float(input('please input outcome for day{}'.format(d))),2)\n",
+    "    out0.append(i)\n",
+    "\n",
+    "for d in range(7):\n",
+    "    s = round((in0[d] - out0[d]),2)\n",
+    "    save0[d] = s\n",
+    "    \n",
+    "total = sum(in0) - sum(out0)\n",
+    "\n",
+    "print('7天的收入(list) ===================================')\n",
+    "for i,v in enumerate(in0):\n",
+    "    print(\"day{}'s income: {}\".format(i, v))\n",
+    "\n",
+    "print('7天的支出(list) ===================================')\n",
+    "for i,v in enumerate(out0):\n",
+    "    print(\"day{}'s outcome: {}\".format(i, v))\n",
+    "\n",
+    "print('每天的结余(dict) ===================================')\n",
+    "for i,v in save0.items():\n",
+    "    print(\"day{}'s balance: {}\".format(i, v))\n",
+    "\n",
+    "print('最终的结余 =========================================')\n",
+    "print(\"final balance: {}\".format(total))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,24 +150,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "1\n",
+      "your balance is: 0\n",
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "2\n",
+      "how much do you want to deposit?1235\n",
+      "done. you deposit 1235 to your accont and current balance is: 1235.0\n",
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "2\n",
+      "how much do you want to deposit?1111\n",
+      "done. you deposit 1111 to your accont and current balance is: 2346.0\n",
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "1\n",
+      "your balance is: 2346.0\n",
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "3\n",
+      "how much do you want to withdraw?123.566\n",
+      "done. you withdraw 123.566 from your accont and current balance is: 2222.43\n",
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "3\n",
+      "how much do you want to withdraw?12456.89\n",
+      "done. you withdraw 12456.89 from your accont and current balance is: -10234.46\n",
+      "\n",
+      "===========\n",
+      "Please select\n",
+      "1. check account balance\n",
+      "2. account deposit\n",
+      "3. account withdraw\n",
+      "4. exit\n",
+      "===========\n",
+      "\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "display = \"\"\"\n",
+    "===========\n",
+    "Please select\n",
+    "1. check account balance\n",
+    "2. account deposit\n",
+    "3. account withdraw\n",
+    "4. exit\n",
+    "===========\n",
+    "\n",
+    "\"\"\"\n",
+    "bal = 0\n",
+    "cmd = 0\n",
+    "\n",
+    "while 4 != cmd :\n",
+    "    cmd = int(input(display))\n",
+    "    \n",
+    "    if   1 == cmd :\n",
+    "        print('your balance is: {}'.format(bal))\n",
+    "    elif 2 == cmd :\n",
+    "        dep = input('how much do you want to deposit?')\n",
+    "        bal += round(float(dep),2)\n",
+    "        print('done. you deposit {} to your accont and current balance is: {}'.format(dep, bal))\n",
+    "    elif 3 == cmd :\n",
+    "        wrd = input('how much do you want to withdraw?')\n",
+    "        bal -= round(float(wrd),2)\n",
+    "        print('done. you withdraw {} from your accont and current balance is: {}'.format(wrd, bal))\n",
+    "    else:\n",
+    "        break"
+   ]
   },
   {
    "cell_type": "markdown",
